added heder, logo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="style.css">
 <head>
 	<meta charset="UTF-8">
 	<title>warehouse</title>
 </head>
 <body>
-	
+	<header class="header">
+		<div class="logo">
+			<div class="orange"></div>
+			<div class="green"></div>
+			<div class="red"></div>
+			<div class="blue"></div>
+		</div>
+		<div class="triangle">
+			<div class="logo"></div>
+		</div>
+		<nav>
+			nav
+		</nav>
+		<div class="big-salt">
+			<div class="left">left</div>
+			<div class="right">right</div>
+		</div>
+
+		
+	</header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+	<script src="script.js"></script>
 </body>
 </html>
